--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -468,7 +468,7 @@
                                     <action selector="update:" destination="vql-Nb-3Mu" eventType="touchUpInside" id="2is-pP-zbo"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3aX-lY-i4r">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3aX-lY-i4r">
                                 <frame key="frameInset" minX="37" minY="100" width="300" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="LOl-xw-wJ8"/>
