--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -209,6 +209,9 @@
                                             <frame key="frameInset" width="342" height="79"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="vql-Nb-3Mu" kind="show" identifier="showItem" id="KMR-tR-WBc"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -222,7 +225,6 @@
                         <outlet property="homeButton" destination="4bo-y0-wUw" id="u86-jC-VmV"/>
                         <outlet property="listButton" destination="cR6-Nv-IgN" id="DwH-SQ-z6b"/>
                         <outlet property="tableView" destination="UmN-m0-H7c" id="BE8-y9-JgW"/>
-                        <segue destination="vql-Nb-3Mu" kind="presentation" identifier="showItem" id="0dO-Yh-EiG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7LQ-cd-Pk8" userLabel="First Responder" sceneMemberID="firstResponder"/>
